<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Equinos App</string>
    <string name="capture_button_alt">Capture</string>
    <string name="unknown">UNKNOWN</string>
    <string name="imagen_estudiada">Imagen estudiada</string>
    <string name="imagen_de_un_caballo">Imagen de un caballo</string>
    <string name="title_home">Home</string>
    <string name="title_galeria">Galería</string>
    <string name="profile_title">Perfil</string>
    <string name="settings_title">Menu</string>
    <string name="abrir_camara">Abrir cámara</string>
    <string name="imagen_seleccionada">Imagen seleccionada de la galería</string>
    <string name="boton_compartir">Botón de compartir</string>
    <string name="boton_eliminar">Botón eliminar</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="repositorio_imagenes">Repositorio de imágenes</string>
    <string name="imagen_clasificada">Imagen clasificada</string>
    <string name="clasificar_imagen">Clasificar imagen</string>
    <string name="nombre">Nombre</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="ingrese_los_datos">Ingrese los datos del caballo</string>
    <string name="observaciones">Observaciones</string>
    <string name="sexo">Sexo</string>
    <string name="edad">Edad</string>
    <string name="entrenado">Entrenado</string>
    <string name="dolor">Dolor</string>
    <string name="salida_a_piquete">Salida a piquete</string>
    <string name="estabulacion">Estabulación</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="equinos_appM">EQUINOS APP</string>
    <string name="ingrese_su_contrasenia">Ingrese su contraseña</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="recordarme">Recordarme</string>
    <string name="olvide_mi_contrasenia">Olvidé mi contraseña</string>
    <string name="login">Login</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="repetir_contrasenia">Repetir Contraseña</string>
    <string name="repita_la_contrasenia">Repita la contraseña</string>
    <string name="password_visibility_toggle">toggle para la visibilidad de la contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="campo_usuario">Usuario</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese su nombre de usuario</string>
    <string name="ingrese_email_o_nombre_usuario">Ingrese email o nombre de usuario</string>
    <string name="identificacion">Identificacion</string>
    <string name="elegir_imagen">Elegir imagen</string>
    <string name="imagen_del_caballo_a_crear">Imagen del caballo a crear</string>
    <string name="bot_n_de_agregar_un_caballo">Botón de agregar un caballo</string>
    <string name="agregar_caballo">Agregar caballo</string>
    <string name="bot_n_de_clasificar_imagen">Botón de clasificar imagen</string>
    <string name="o">o</string>
    <string name="agregue_un_caballo">Agregue\nun caballo</string>
    <string name="seleccione_el_caballo">Seleccione\nel caballo</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="caballo_seleccionado">Caballo seleccionado</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="por_favor_espere" tools:ignore="Typos">Un momento,\npor favor…</string>
    <string name="perfil">Perfil</string>
    <string name="boton_para_volver_atras">Botón para volver atrás</string>
    <string name="flecha_de_acceso">Flecha de acceso</string>
    <string name="boton_notificaciones">Botón notificaciones</string>
    <string name="work_in_progess">Work in progess…</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="tipo_usuario">Tipo de usuario</string>
    <string name="ejemplo_mail">ejemplo@gmail.com</string>
    <string name="compartir">Compartir</string>
    <string name="boton_notas">Botón notas</string>
    <string name="configuracion">Configuración</string>
    <string name="boton_configuracion">Botón configuración</string>
    <string name="desloguearse">Salir</string>
    <string name="boton_para_desloguearse">Botón para desloguearse</string>
    <string name="notas">Notas</string>
    <string name="eliminar_foto_actual">Eliminar foto actual</string>
    <string name="cambiar_foto">Cambiar foto</string>
    <string name="establo">Establo</string>
    <string name="boton_de_agregar_caballo">Botón de agregar caballo</string>
    <string name="tiro_al_blanco">Tiro al blanco</string>
    <string name="foto_del_caballo">Foto del caballo</string>
    <string name="imagen_del_tip">Imagen del tip</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="ver_todo">Ver todo</string>
    <string name="tips">Tips</string>
    <string name="usuario_avanzado">Usuario avanzado</string>
    <string name="lista_de_tips">Lista de tips</string>
    <string name="menu_title">Menu</string>
    <string-array name="sexo_array">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="open_camera">Abrir cámara</string>
    <string name="gallery">galería</string>
    <string name="repository">Repositorio</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="cambiar_tema">Cambiar \ntema </string>
    <string name="modo_sin_conexi_n">Modo sin conexión</string>
</resources>
