<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/establo"
    tools:context="com.equinos.loginSignUp.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/loginCardView"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logocaballo"
            app:shapeAppearanceOverlay="@style/Circular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/equinos_appM"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="165dp"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/registrarse"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campo_usuario"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nombreEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/ingrese_su_nombre_de_usuario"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="@color/greyText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_electronico"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:drawableEnd="@drawable/done_icon"
                android:hint="@string/ingrese_su_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/greyText"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contrasenia"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/ingrese_su_contrasenia"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingEnd="40dp"
                    android:textColorHint="@color/greyText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" /> <!-- Add padding to the end to make space for the icon -->

                <ImageView
                    android:id="@+id/passwordToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:clickable="true"
                    android:contentDescription="@string/password_visibility_toggle"
                    android:focusable="true"
                    android:src="@drawable/ic_visibility_off" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_contrasenia"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_marginTop="-10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">

                <EditText
                    android:id="@+id/repeatPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/repita_la_contrasenia"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="@color/greyText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <CheckBox
                android:id="@+id/checkbox_advanced_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario_avanzado"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:text="@string/crear_cuenta"
                app:cornerRadius="16dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>