<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gallery.ImageViewerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/ButtonsLl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/disgustado"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imagen_seleccionada" />

    <LinearLayout
        android:id="@+id/ButtonsLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="16dp">

        <ImageButton
            android:id="@+id/shareImage"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/boton_compartir" />

        <ImageButton
            android:id="@+id/deleteImage"
            android:layout_width="0sp"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_baseline_delete_24"
            app:tint="@color/colorAccent"
            android:contentDescription="@string/boton_eliminar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>