<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/camera_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:scaleType="fitCenter" />

    <FrameLayout
        android:id="@+id/fl_preview_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_predicted"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:contentDescription="@string/imagen_estudiada"
            android:scaleType="fitCenter"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_prediction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="40dp"
            android:layout_marginTop="@dimen/margin_xsmall"
            android:background="@color/colorAccent"
            android:text="@string/unknown"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <View
            android:id="@+id/box_prediction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_rectangle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/focus_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/focus_ring"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </FrameLayout>


    <!-- Camera control buttons -->

    <ImageButton
        android:id="@+id/gallery_button"
        android:layout_width="@dimen/round_button_medium"
        android:layout_height="@dimen/round_button_medium"
        android:layout_marginEnd="@dimen/margin_xlarge"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/baseline_add_photo_alternate_24"
        android:contentDescription="@string/capture_button_alt"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/camera_capture_button" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="@dimen/round_button_large"
        android:layout_height="@dimen/round_button_large"
        android:layout_marginBottom="@dimen/shutter_button_margin"
        android:background="@drawable/ic_shutter"
        android:contentDescription="@string/capture_button_alt"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/baseline_save_24"
        android:contentDescription="@string/capture_button_alt"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera_capture_button"/>

    <ImageButton
        android:id="@+id/uploadBtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/margin_xlarge"
        android:background="@drawable/ic_upload_56"
        app:layout_constraintHorizontal_bias="0.8"
        android:contentDescription="@string/capture_button_alt"
        android:scaleType="fitCenter"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/camera_capture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>